<resources>
    <string name="app_name">MyApp</string>
    <string name="calc">CALC</string>
    <string name="not_so_simple">Not so simple</string>
    <string name="simple">Simple</string>
    <string name="credits">Credits</string>
    <string name="bye_bye">Bye bye</string>
    <string name="del">DEL</string>
    <string name="c">C</string>
    <string name="sign">+/-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mul">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub">-</string>
    <string name="comma">.</string>
    <string name="_0">0</string>
    <string name="equ">=</string>
    <string name="plus">+</string>
    <string name="hello_have_a_nice_day_created_by_micha_niksa">| hello || have a nice day || created by Michał Niksa |</string>
    <string name="sqrt">sqrt</string>
    <string name="x_2">x^2</string>
    <string name="x_y">x^y</string>
    <string name="log">log</string>
    <string name="sin">SIN</string>
    <string name="cos">COS</string>
    <string name="tan">TAN</string>
    <string name="ln">ln</string>
</resources>
