<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.niksior.myapp.SimpleCalc">

    <TextView
        android:id="@+id/resultBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultBox">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="clickC"
            android:text="@string/del"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="170dp" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/deleteButton"
            android:onClick="clickClear"
            android:text="@string/c" />

        <Button
            android:id="@+id/signButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/clearButton"
            android:onClick="clickSign"
            android:text="@string/sign" />

        <Button
            android:id="@+id/numberButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberButton8"
            android:layout_alignBottom="@+id/numberButton8"
            android:layout_alignParentStart="true"
            android:onClick="click7"
            android:text="@string/_7" />

        <Button
            android:id="@+id/numberButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clearButton"
            android:layout_toEndOf="@+id/deleteButton"
            android:onClick="click8"
            android:text="@string/_8" />

        <Button
            android:id="@+id/numberButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberButton8"
            android:layout_alignBottom="@+id/numberButton8"
            android:layout_toEndOf="@+id/numberButton8"
            android:onClick="click9"
            android:text="@string/_9" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberButton9"
            android:layout_alignBottom="@+id/numberButton9"
            android:layout_toEndOf="@+id/signButton"
            android:onClick="clickDiv"
            android:text="@string/div" />

        <Button
            android:id="@+id/numberButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberButton5"
            android:layout_alignBottom="@+id/numberButton5"
            android:layout_alignParentStart="true"
            android:onClick="click4"
            android:text="@string/_4" />

        <Button
            android:id="@+id/numberButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberButton8"
            android:layout_toEndOf="@+id/numberButton4"
            android:onClick="click5"
            android:text="@string/_5" />

        <Button
            android:id="@+id/numberButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberButton5"
            android:layout_alignBottom="@+id/numberButton5"
            android:layout_toEndOf="@+id/numberButton5"
            android:onClick="click6"
            android:text="@string/_6" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divideButton"
            android:layout_toEndOf="@+id/numberButton9"
            android:onClick="clickMul"
            android:text="@string/mul" />

        <Button
            android:id="@+id/numberButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberButton4"
            android:layout_toStartOf="@+id/numberButton5"
            android:onClick="click1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/numberButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberButton4"
            android:layout_toEndOf="@+id/numberButton1"
            android:onClick="click2"
            android:text="@string/_2" />

        <Button
            android:id="@+id/numberButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberButton6"
            android:layout_toEndOf="@+id/numberButton2"
            android:onClick="click3"
            android:text="@string/_3" />

        <Button
            android:id="@+id/subtractionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/multiplyButton"
            android:layout_toEndOf="@+id/numberButton6"
            android:onClick="clickSub"
            android:text="@string/sub" />

        <Button
            android:id="@+id/commaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberButton0"
            android:layout_alignBottom="@+id/numberButton0"
            android:layout_alignParentStart="true"
            android:onClick="clickDot"
            android:text="@string/comma" />

        <Button
            android:id="@+id/numberButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberButton2"
            android:layout_toEndOf="@+id/numberButton1"
            android:onClick="click0"
            android:text="@string/_0" />

        <Button
            android:id="@+id/equalsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/numberButton0"
            android:layout_alignBottom="@+id/numberButton0"
            android:layout_toEndOf="@+id/numberButton0"
            android:onClick="clickEq"
            android:text="@string/equ" />

        <Button
            android:id="@+id/additionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/signButton"
            android:onClick="clickAdd"
            android:text="@string/plus" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
